--- a/application.yml
+++ b/application.yml
@@ -5,3 +5,6 @@ eureka:
   client:
     service-url:
       defaultZone: http://localhost:8761/eureka
+  spring:
+    applicaton:
+      name: config
