--- a/application.yml
+++ b/application.yml
@@ -5,6 +5,6 @@ eureka:
   client:
     service-url:
       defaultZone: http://localhost:8761/eureka
-  spring:
-    applicaton:
-      name: config
+spring:
+  applicaton:
+    name: CONFIG-DEFAULT
